--- a/src/index.css
+++ b/src/index.css
@@ -16,10 +16,6 @@ html body {
     color: white;
 }
 
-h2 {
-    font-style: italic;
-}
-
 .primary-button {
     color: black;
     font-size: 15px;
@@ -91,6 +87,7 @@ h2 {
 .home article p{
     color: black;
     letter-spacing: 1px;
+    font-size: 20px;
 }
 
 .home .home-buttons {
@@ -123,7 +120,7 @@ h2 {
     }
 
     .home article p{
-        font-size: 12px;
+        font-size: 16px;
     }
 
     .home .home-buttons {
@@ -199,8 +196,6 @@ nav .logo-container h3 {
 /*------------------- Vertical Nav -----------------*/
 .vertical-nav {
     width: 20%;
-    /*border: solid 2px;*/
-    border-radius: 10px;
     background-color: white;
     position: fixed;
     height: 100%;
@@ -210,6 +205,7 @@ nav .logo-container h3 {
 .vertical-nav .logo-container h3 {
     color: #5FB51C;
     font-weight: bold;
+    font-size: 24px;
 }
 
 .vertical-nav .nav-text {
@@ -236,7 +232,12 @@ nav .logo-container h3 {
 
 .vertical-nav li:hover {
     background-color: #dddddd;
-    border-radius: 10px;
+    border-radius: 5px;
+}
+
+.vertical-nav .clicked {
+    background-color: #dddddd;
+    border-radius: 5px;
 }
 
 .vertical-nav li span {
@@ -256,7 +257,7 @@ nav .logo-container h3 {
     display: flex;
     align-items: baseline;
     margin-left: 20px;
-    margin-top: 20px;
+    margin-top: 5px;
 }
 
 .vertical-nav .logo-container .logo {
@@ -341,6 +342,8 @@ nav .logo-container h3 {
     .vertical-nav ul {
         display: flex;
         width: 100%;
+        height: 90%;
+        margin: 0;
         justify-content: center;
     }
 
@@ -352,6 +355,36 @@ nav .logo-container h3 {
 
     .vertical-nav ul li:last-child {
         margin-top: auto;
+    }
+}
+
+/*------------------- Horizontal Nav ---------------*/
+.horizontal-nav {
+    display: flex;
+    width: 460px;
+    justify-content: space-between;
+    margin-left: 462px;
+    border-bottom: 1px solid #dddddd;
+}
+
+.horizontal-nav span {
+    display: flex;
+    align-items: center;
+}
+
+@media (max-width: 768px) {
+    .horizontal-nav {
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
+
+@media (max-width: 767px) {
+    .horizontal-nav {
+        width: 100%;
+        margin-left: 0;
+        margin-right: 0;
     }
 }
 
@@ -544,8 +577,7 @@ nav .logo-container h3 {
     /*height: 100%;*/
     max-height: 250px;
     max-width: 200px;
-    border-radius: 30px;
-    border: solid 2px #5FB51C;
+    border-radius: 10px;
 }
 
 .profile-personal-info-section div .personal-info{
@@ -558,7 +590,7 @@ nav .logo-container h3 {
 .profile-personal-info-section div .personal-info .name-button .username{
     font-weight: bold;
     margin-right: 20px;
-    font-size: 1.2rem;
+    font-size: 1.4rem;
 }
 .profile-personal-info-section div .personal-info .name-button{
     display: flex;
@@ -570,10 +602,14 @@ nav .logo-container h3 {
     border: none;
 }
 
-.profile-personal-info-section div .personal-info .chat-icon {
-    width: 30px;
-    height: 30px;
-    color: #5FB51C;
+.profile-personal-info-section div .personal-info .message-button {
+    background-color: #9AFB4D;
+    padding: 7px 15px;
+    border-radius: 10px;
+    margin-left: 25px;
+    color: black;
+    font-size: 16px;
+    max-height: 15px;
     cursor: pointer;
 }
 
@@ -638,8 +674,9 @@ nav .logo-container h3 {
 
 .profile-study-info-section article .category{
     font-weight: bold;
-    color: #6C6C6C;
+    /*color: #6C6C6C;*/
     margin-right: 20px;
+    font-size: 16px;
     display: flex;
     align-items: center;
 }
@@ -652,7 +689,6 @@ nav .logo-container h3 {
 
 .profile-coffee-study-plan-section h2 {
     font-size: 20px;
-    color: #6C6C6C;
 }
 
 .profile-coffee-study-plan-section .add-plan-icon {
@@ -694,7 +730,7 @@ nav .logo-container h3 {
 @media (max-width: 950px) {
     .profile-container .profile-section-container {
         width: 70%;
-        margin-left: 15%;
+        margin-left: 12%;
     }
     .profile-personal-info-section div {
         width: 100%;
@@ -746,18 +782,15 @@ nav .logo-container h3 {
 @media (max-width: 444px) {
 
     .profile-section article{
-        font-size: 12px;
-    }
-    .profile-coffee-study-plan-section h2 {
-        font-size: 18px;
-    }
-
-    .profile-coffee-study-plan-section .plan-card .name-button-section .name {
         font-size: 16px;
     }
 
+    .profile-coffee-study-plan-section .plan-card .name-button-section .name {
+        font-size: 18px;
+    }
+
     .profile-coffee-study-plan-section .plan-card .plan-info-section li {
-        font-size: 14px;
+        font-size: 16px;
     }
 
     .profile-personal-info-section div .personal-info {
@@ -798,7 +831,7 @@ nav .logo-container h3 {
 
     .profile-personal-info-section div .about {
         /*display: none;*/
-        font-size: 12px;
+        font-size: 14px;
         font-weight: 400;
         margin-top: 20px;
     }
@@ -1099,7 +1132,7 @@ nav .logo-container h3 {
     width: 440px;
     max-height: 650px;
     margin: auto;
-    border-radius: 20px;
+    border-radius: 10px;
     padding: 10px 15px;
     background-color: white;
     /*color: #5FB51C;*/
@@ -1117,26 +1150,33 @@ nav .logo-container h3 {
 .plan-card .name-button-section {
     width: 90%;
     display: flex;
-    align-items: center;
 }
 
-.plan-card .name-button-section .name{
+.plan-card .name-button-section article{
+    display: flex;
+}
+
+.plan-card .name-button-section article .name{
     font-size: 18px;
     font-weight: bold;
+    margin-top: 0;
 }
 
-.plan-card .name-button-section .message-button {
+.plan-card .name-button-section article .message-button {
     background-color: #9AFB4D;
-    padding: 5px 15px;
+    padding: 7px 15px;
     border-radius: 10px;
     margin-left: 25px;
     color: black;
-    font-size: 15px;
+    font-size: 16px;
+    max-height: 15px;
+    cursor: pointer;
 }
 
 .plan-card .name-button-section .small-profile-image {
     border-radius: 25px;
     margin-right: 15px;
+    max-height: 50px;
 }
 
 .plan-card .name-button-section p {
@@ -1176,11 +1216,13 @@ nav .logo-container h3 {
     display: flex;
     align-items: center;
     margin-right: 10px;
-    color: #6C6C6C;
+    /*color: #6C6C6C;*/
+    font-weight: bold;
 }
 
 .plan-card .plan-info-section li .text {
     color: black;
+    font-weight: normal;
 }
 
 .plan-card .plan-info-section li span .icon {
@@ -1202,7 +1244,7 @@ nav .logo-container h3 {
 
 .plan-crud-container h2 {
     font-weight: bold;
-    color: #5FB51C;
+    color: black;
     text-transform: uppercase;
     margin-top: 30px;
 }
@@ -1294,19 +1336,6 @@ nav .logo-container h3 {
     margin-left: 160px;
 }
 
-.dashboard-container .newfeed-container .location-title {
-    font-size: 18px;
-    color: #6C6C6C;
-    margin-left: -300px;
-
-    margin-bottom: 30px;
-}
-
-.dashboard-container .newfeed-container h2 .location-icon {
-    width: 20px;
-    height: 20px;
-}
-
 .dashboard-container .newfeed-container .create-plan-title {
     font-size: 20px;
     color: #6C6C6C;
@@ -1330,7 +1359,7 @@ nav .logo-container h3 {
 }
 
 .dashboard-container .newfeed-container .plans-container .plan-card {
-    margin-bottom: 20px;
+    margin-bottom: 10px;
     max-width: 650px;
 }
 .dashboard-container .newfeed-container .plans-container .plan-card:first-child {
@@ -1350,11 +1379,13 @@ nav .logo-container h3 {
     padding-left: 0;
     list-style-type: none;
     overflow-y: scroll;
+    margin-top: 5px;
 }
 
-.dashboard-container aside ul h2 {
+.dashboard-container aside ul .soulmates-title {
     font-size: 18px;
-    color: #6C6C6C;
+    text-align: left;
+    margin-left: 20px;
 }
 
 .dashboard-container aside li {
@@ -1411,16 +1442,20 @@ nav .logo-container h3 {
 
 @media (max-width: 550px) {
     .dashboard-container .newfeed-container .plans-container .plan-card{
+        width: 92%;
+    }
+    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section article {
+        flex-direction: column;
+        align-items: start;
+    }
+
+    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section article .message-button {
+        margin-left: 0;
         font-size: 12px;
-        width: 90%;
     }
 
-    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section .name {
-        font-size: 14px;
-    }
-
-    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section .message-button {
-        font-size: 10px;
+    .dashboard-container .newfeed-container .plans-container .plan-card .name-button-section article .name {
+        font-size: 18px;
     }
 
     .dashboard-container .newfeed-container {
